# mcp-cap-internal

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  plan.md  pyproject.toml  requirements.txt  server.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  module_request.yml
.github/workflows/: deploy-website.yml  release.yml  test.yml
docs/source/: conf.py  index.rst
docs/source/_static/: .gitkeep
docs/source/api/: cli.rst  core.rst  modules.rst
docs/source/developer/: contributing.md  module-creation-tutorial.md
docs/source/user-guide/: analysis-guides.md  installation.md  mcp-integration.md  quickstart.md
examples/: README.md  dhcp.pcap
src/mcpacket/: __init__.py  _version.py  cli.py
src/mcpacket/core/: __init__.py  config.py  server.py
src/mcpacket/modules/: __init__.py  base.py  dns.py
src/mcpacket/resources/: __init__.py  references.py
src/mcpcap/: __init__.py  cli.py
src/mcpcap/core/: __init__.py  config.py  server.py
src/mcpcap/modules/: __init__.py  base.py  capinfos.py  dhcp.py  dns.py  icmp.py
src/mcpcap/resources/: __init__.py
tests/: __init__.py  test_cli.py  test_dhcp.py  test_dns.py
tests/test_modules/: test_capinfos.py  test_icmp.py
website/: CNAME  README.md  index.html  script.js  sitemap.xml  styles.css
